Dice Helper +App

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
 	<link rel = "stylesheet" type = "text/css" href = "resources/stylesheets/style.css" />
-	<title>Dice Helper</title>
+	<title>Dice Helper App</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 
 <div id = "menu">
-	<h1>Dice Helper</h1>
+	<h1>Dice Helper App</h1>
 	<ul>
 		<li><a href = "?game=one">1x &#9861;</a></li>
 		<li><a href = "?game=two">2x &#9861;</a></li>
