--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<link rel = "stylesheet" type = "text/css" href = "resources/stylesheets/style.css" />
 	<title>Dice Helper App</title>
+	<link rel = "shortcut icon" href = "favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -9,6 +10,8 @@
 
 <div id = "menu">
 	<h1>Dice Helper App</h1>
+
+
 	<ul>
 		<li><a href = "?game=one">1x &#9861;</a></li>
 		<li><a href = "?game=two">2x &#9861;</a></li>
